# eventos-web-app

./: .gitignore  .pre-commit-config.yaml  GITHUB_SETUP.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  activate.ps1  alembic.ini  auto-activate.ps1  docker-entrypoint.sh  pyproject.toml  pytest.ini  run.py
backend/alembic/: env.py
backend/alembic/versions/: 24530a0a489e_initial_migration_create_all_tables.py  add_soft_delete_fields.py  remove_unique_constraint_registrations.py
backend/app/: __init__.py  config.py  database.py
backend/app/api/v1/: __init__.py  attendees.py  auth.py  events.py  sessions.py  users.py
backend/app/core/: db_utils.py  deps.py  event_validations.py  exceptions.py  pagination.py  security.py  validators.py
backend/app/crud/: __init__.py  attendee.py  event.py  session.py  user.py
backend/app/models/: __init__.py  attendee.py  event.py  session.py  user.py
backend/app/schemas/: __init__.py  attendee.py  event.py  pagination.py  session.py  user.py
backend/app/scripts/: create_admin.py
backend/app/services/: __init__.py  attendee_service.py  event_service.py  session_service.py  user_service.py
backend/tests/: conftest.py  test_attendees.py  test_auth.py  test_events.py  test_sessions.py  test_users.py
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile  INICIO_RAPIDO.md  README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: CreateEvent.jsx  EditEvent.jsx  EventDetail.jsx  Home.jsx  Login.jsx  Profile.jsx  (+1 more)
(+22 files in other folders)
